--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ Flask==2.2.5
 Werkzeug==2.3.6
 PyPDF2==3.0.1
 python-docx==1.1.2
-en-core-web-sm==3.5.0
-en-core-web-md==3.5.0
-en-core-web-lg==3.5.0
+
+# SpaCy models from Explosion’s releases
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0-py3-none-any.whl
+https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl
 
 
 
